syntax = "proto3";

package sniper;

message GpuPsFeature64 {
  repeated uint64 features = 1;
  repeated int32 item_indices = 2;
}
